@@ -4,6 +4,7 @@ v3.2:
   - Motion correction outputs renamed and fixed for odd/even and dose weighted
   - Tilt series can be sent to Xmipp metadata viewer for subsetting/inspection
   - TomoMetadataViewer shows the preview of the slice and some metadata (tiltAxisAngle)
+  - Fix: Imod not needed for importing coordinates, unless imod mode is selected
 
   Developers:
   - angleAxis1 and angleAxis2 removed from the TomoAcquisition class
